- исправление мелких дефектов для запуска UI Автотестов